# tiny-mailcatcher

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: CI.yml
src/: email.rs  http.rs  lib.rs  repository.rs  smtp.rs
tests/: http_server.rs  smtp_server.rs
