[package]
name = "tiny-mailcatcher"
version = "0.9.0"
authors = ["Pieter van den Ham <pevandenham@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A tiny MailCatcher clone"
readme = "README.md"
repository = "https://github.com/pevdh/tiny-mailcatcher"
keywords = ["email", "mailcatcher", "smtp", "mta"]
categories = ["development-tools"]

[[bin]]
name = "tiny-mailcatcher"
path = "src/bin/tiny-mailcatcher.rs"

[dependencies]
tokio = { version = "1", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread"] }
structopt = { version = "0.3", default-features = false }
env_logger = { version = "0.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
log = "0.4"
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"
regex = "1.5.4"
mailparse = "0.13"
memchr = "2.4.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.10.0-rc.3", features = ["tokio1"] }

[profile.release]
lto = true